# databricks-local

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  GITHUB_SETUP.md  LICENSE  NOTICE  README.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
databricks_shim/: __init__.py  connect.py  unity_catalog.py  utils.py
notebooks/: analysis.ipynb
tests/: conftest.py  test_etl.py  test_unity_catalog.py
