[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-local"
version = "0.4.0"
description = "Unofficial local development environment for Unity Catalog patterns with PySpark 3.5.3 + Delta Lake 3.3.2 (NOT affiliated with Databricks)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Omar Becerra Sierra", email = "omarbecerrasierra@gmail.com"}
]
maintainers = [
    {name = "Omar Becerra Sierra", email = "omarbecerrasierra@gmail.com"}
]
keywords = ["pyspark", "delta-lake", "unity-catalog", "spark", "data-engineering", "local-development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Database",
]
dependencies = [
    "pyspark==3.5.3",
    "delta-spark==3.3.2",
    "boto3>=1.34",
    "ipykernel",
    "notebook>=7.0",
    "mlflow>=2.21",
]

[project.urls]
Homepage = "https://github.com/omarbecerrasierra/databricks-local"
Repository = "https://github.com/omarbecerrasierra/databricks-local"
Issues = "https://github.com/omarbecerrasierra/databricks-local/issues"
Discussions = "https://github.com/omarbecerrasierra/databricks-local/discussions"
Changelog = "https://github.com/omarbecerrasierra/databricks-local/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["databricks_shim*"]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.ruff.lint]
# Ignorar nombres de variables ambiguos usados en comprehensions
ignore = ["E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
